# apt-compression

./: .gitignore  FORMAT.md  README.md  app.js  evaluate_range_spatial_resolution.py  hypernetwork_common.py  index.html  package-lock.json  package.json  preprocess.py  pyproject.toml  requirements.txt  run.py  server.py  train_cdf_hypernetwork.py  train_cdf_v2.py  train_range_neural_reps.py  train_range_nif.py  vite.config.js
cpos/: __init__.py  cli.py  codec.py  io.py
data/: example.cpos  example.json
demo/: index.html  renderer.js  style.css
docs/compression-explainer/: README.md  index.html  style.css  viewer.js
experiments/: bitpack.py  codecs_adaptive.py  codecs_binsort.py  codecs_grid.py  codecs_neural.py  codecs_points.py  codecs_wavelet.py  common.py  explore.py  export_explainer.py  rescore.py  run_all_datasets.sh  run_bench.py  spectrum_store.py
experiments/lossless12/: README.md  RESULTS.md  __init__.py  benchmark.py  lossless12.py  refine.py  test_lossless12.py
experiments/lossless12/results/: full_axes.json  full_backends.json  full_sweep.json
experiments/lossy4m/: FORMAT.md  README.md  RESULTS.md  TUNING.md  __init__.py  benchmark.py  build_demo.py  cli.py  codec.py  metrics.py  noise_study.py  report.py  test_codec.py  tune.py
experiments/lossy4m/demo/: app.js  encoder-worker.js  (+4 more)
javascript/: cli.mjs  cpos.js  test.mjs
scripts/: build_cdf_v2_wasm.py  build_demo.py  build_pages_demo.py  build_site.py  download_example.py
src/: cdfV2.js  cdfV2Gpu.js  cdfV2Wasm.js  main.js  style.css
src/wasm/: cdf_v2_sampler.ts
tests/: test_codec.py
(+9 files in other folders)
